--- a/blog/src/index.css
+++ b/blog/src/index.css
@@ -16,3 +16,20 @@ html, body {
     margin: 0;
     height: 100%;
 }
+
+::-webkit-scrollbar {
+    width: 3px;
+    height: 6px;
+}
+::-webkit-scrollbar-track {
+    border-radius: 3px;
+    background: rgba(0,0,0,0.06);
+    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.08);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background: rgba(0,0,0,0.12);
+    -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+}
+
